2006-03-02 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/lib/testfwk.c,
	  support/regression/fwk/include/testfwk.h: introduced function
	  _prints(), nonrecursive _printn(), call _initEmu() from main()
	* support/regression/ports/gbz80/support.asm,
	  support/regression/ports/ucz80/support.asm,
	  support/regression/ports/z80/support.asm,
	  support/regression/ports/ds390/support.c,
	  support/regression/ports/hc08/support.c,
	  support/regression/ports/host/support.c,
	  support/regression/ports/mcs51/support.c,
	  support/regression/ports/xa51/support.c: added empty _initEmu()
	  function
	* support/regression/ports/pic16/gpsim.cmd,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/pic16/support.c,
	  support/regression/Makefile.in: added pic16 regression test

2006-03-01 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genPcall,pic16_derefPtr,genGenPointerGet,
	  genConstPointerGet): use safe way of generating MOVFF to cover
	    literals as well as registers, fixes bug #1440527
	* src/pic16/glue.c (pic16_printIvalBitFields): prevent NULL pointer
	    dereference
	  (pic16_printIvalUnion,pic16_isUnion): NEW, handle initialized unions
	    more correctly, fixes bug #1232186
	  (pic16_printIval): use pic16_printIvalUnion() for initialized unions
	* src/pic16/main.c (_pic16_linkEdit): reorder linker arguments to make
	    gplink guess the correct processor in more cases, applied patch
	    from Till Riedel attached to and fixing bug #1436552

2006-02-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/array.c: added, contains check for #1434401
	* src/mcs51/peeph.def: disabled 186.d as temporary fix for #1434401

2006-02-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89s8253.h: new, thanks to Krzysztof Polomka
	* device/include/mcs51/at89S8252.h: fixed, thanks to Krzysztof Polomka
	* device/include/mcs51/c8051f326.h,